[SPARK-57969] Use virtual thread for periodic GC scheduler